--- a/A4MaxwellSchutze.project
+++ b/A4MaxwellSchutze.project
@@ -70,7 +70,7 @@
       "eslintRules": null,
       "expanded_pmp": null,
       "extraheaders": null,
-      "firstform": "employeeDeleter",
+      "firstform": "statePicker",
       "fontFamily": "system",
       "googlePlayKey": "certificates/google.json",
       "googlePlayTrack": "production",
